# wfm-copilot

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  render.yaml  run_demo.sh
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  db_migrate.py  identity.py  main.py
backend/migrations/: 0001_initial.sql  0002_forecast_status.sql  0003_staffing.sql  0004_staffing_asa.sql  0005_schedule_links.sql  0006_chat.sql  0007_anomalies.sql  0008_chat_observability.sql  0009_schedule_change_log.sql  0010_notifications.sql  0011_chat_apply_tokens.sql  0012_multi_skill.sql  0013_realtime_clock.sql  0014_adherence.sql  0015_leave.sql  0016_training_performance.sql  0017_interval_history_skill_unique.sql  0018_leave_decision_log.sql  0019_offers.sql  0020_forecast_override_log.sql  0021_staffing_target_change_log.sql  0022_users_rbac.sql  0023_vacation_bidding.sql
backend/scripts/: backfill_actuals.py  db_snapshot.sh  generate_synthetic_data.py  generate_wave3_4_data.py  preflight.py  seed_agents.py  seed_prod_real.py  seed_prod_skeleton.py  seed_vacation_round.py  smoke_wave3_4.py
backend/test/: eval_anomaly_chat.py  eval_faithfulness.py  eval_render_assertion.py  eval_tool_selection.py  test_anomaly_detection.py  test_break_move.py  test_chat_observability.py  test_chat_router.py  test_chat_timeout.py  test_create_shift.py  test_forecast_override.py  test_forecast_override_integration.py  test_identity.py  test_job_sweeper.py  test_leave_decision.py  test_leave_decision_integration.py  test_long_range_forecast.py  test_multi_skill_data.py  test_multi_skill_staffing.py  test_offer.py  test_offer_integration.py  (+15 more)
(+162 files in other folders)
